tests/expectations/compiler/array/array_concat_fail.out
Error [ESAZ0374012]: The resulting array length exceeds the maximum allowed length: 32.
    --> compiler-test:5:13
     |
   5 |     let c = a + b; 
     |             ^^^^^
